[gd_scene load_steps=2 format=3 uid="uid://b3mxi1h8c1ory"]

[ext_resource type="Script" uid="uid://bhdtl32eihaa0" path="res://Lobby.gd" id="1_gv8if"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gv8if")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="LeaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ChatLog" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ChatInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SendButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
